--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,6 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/BotTools/lib/JDA/JDA-4.3.0_277-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/json/json-java20220320.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Spartak/Documents/Eclipse workspace/Support/lib/json/json-java20220320.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
