--- a/lib/.project
+++ b/lib/.project
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>lib</name>
-	<comment>Project BotTools-lib created by Buildship.</comment>
+	<comment>Project lib created by Buildship.</comment>
 	<projects>
-		<project>lavaplayer</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
