--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -48,9 +48,11 @@ dependencies {
     implementation 'com.rometools:rome:1.18.0'
     //implementation 'org.slf4j:slf4j-simple:2.0.3'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha13'
+    
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.23'
 }
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
+    useJUnitPlatform();
 }
